# Platinum-Pedigree-Inheritance

./: HAPLOTYPING.md  LICENSE.md  README.md
analyses/: Concordance.md  StructuralVariant.md
code/inheritance_vectors/: prepare_snps.py  viterbi.py  viterbi_to_inht_vectors.py
code/plotting/: plot-iht.R
code/python/: README.md  unphase.py
code/python/src/: interval_tree_merge.py  sv_intersect_ebert.py
code/rust/: Cargo.toml
code/rust/data/: known_cases.vcf.gz.tbi
code/rust/notes/: large-del.xml  verification.md
code/rust/src/: bed.rs  gfa.rs  iht.rs  lib.rs  ped.rs  rgfa.rs  utils.rs  vcf2seq.rs
code/scripts/: mgutils-patched.js
pipelines/inheritance-vectors/: README.md  inhHMM.smk
pipelines/smallvar-filtering/: README.md
pipelines/tandem-repeats/: 00_Allele_db.ipynb  00_Initial_filtering.ipynb  01_Consistency.ipynb  02_Consistent_VCF.ipynb  03_Study_trs.ipynb
pipelines/tandem-repeats/helpers/: consistency.py
