[package]
name = "concordance"
version = "0.1.1"
authors = [ "Zev Kronenberg <zkronenberg@pacificbiosciences.com>", "Daniel Baker <dbaker@pacificbiosciences.com>"]
description = "Filter and report variant counts"
edition = "2021"
keywords = ["variant-calling", "inheritance", "genetics"]
repository = "https://github.com/PacificBiosciences/PlatinumPedigree"
categories = ["science", "algorithms", "command-line-utilities"]
readme = "../../README.md"
license-file = "../../LICENSE.md"

[[bin]]
name = "concordance"
path = "src/bin/concordance.rs"

[[bin]]
name = "mash2vcf"
path = "src/bin/mash2vcf.rs"

[[bin]]
name = "denovo"
path = "src/bin/denovo.rs"

[[bin]]
name = "resolver"
path = "src/bin/grapher.rs"

[[bin]]
name = "ovlfilter"
path = "src/bin/overlap2keepers.rs"

[[bin]]
name = "anno"
path = "src/bin/annotateOvl.rs"

[[bin]]
name = "asmprefix"
path = "src/bin/asm_prefixer.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
slurp = "1.0.1"
csv = "1.1"
rust-htslib = "0.44.1"
edit-distance = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
env_logger = "0.10.1"
gfa-reader = "0.1.4"
itertools = "0.12.1"
regex = "1.10.3"
